--- a/app/pages/page3/page3.scss
+++ b/app/pages/page3/page3.scss
@@ -1,3 +1,18 @@
 .page3 {
-
+   
 }
+
+ .completeddd {
+	color: #d9d9d9;
+	text-decoration: line-through;
+    }
+  .notcompleteddd{
+    color:black;
+    test-decoration: none;
+  }
+  .fixed{
+      position: fixed;
+      z-index: 99999;
+      top:87%;
+      right:8%;
+  }
